--- a/docbook/src/main/doc/adoc/content/chapter-5-Advanced_User_Guide.adoc
+++ b/docbook/src/main/doc/adoc/content/chapter-5-Advanced_User_Guide.adoc
@@ -8937,3 +8937,95 @@ here is an example:
 If the *_org.jboss.wsf.test.JBWS3628TestCase.policy_* system property is
 defined and set to " *_WS-Addressing_policy_* ", WS-Addressing will be
 enabled for the endpoint defined by the contract above.
+
+=== Throtlling
+The throttling feature allows server to limit the number of request when the server is busy or
+there are a lot of faults by some requests. This can protect server from being overwhelmed and server resource is used
+out.
+From JBossWS 7.2.0, the `JBossWSThrottlingFeature' is provided to support Throtlling for JBossWS and WFLY
+users. As each ThrotllingFeature needs a ThrolltingManager to do the actual work, the 'EndpointMetricsThrottlingManager' is created
+to throttle or limit the flow based on the metrics from the webserivce endpoint. 'EndpointMetricsThrottlingManager' can use the
+throshold for endpoint metric value like requestCount, faultCount etc.
+
+The throttling configuration can be defined in the `jbossws-endpoint-config.xml` like :
+```
+<jaxws-config xmlns="urn:jboss:jbossws-jaxws-config:4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:javaee="http://java.sun.com/xml/ns/javaee"
+  xsi:schemaLocation="urn:jboss:jbossws-jaxws-config:4.0 schema/jbossws-jaxws-config_4_0.xsd">
+
+  <endpoint-config>
+    <config-name>org.jboss.test.ws.jaxws.cxf.throttling.HelloWorldImpl</config-name>
+    <property>
+      <property-name>cxf.features</property-name>
+      <property-value>##throttlingFeature</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingFeature</property-name>
+      <property-value>org.jboss.wsf.stack.cxf.features.throttling.JBossWSThrottlingFeature</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingFeature.throttlingManager</property-name>
+      <property-value>##throttlingManager</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingManager</property-name>
+      <property-value>org.jboss.wsf.stack.cxf.features.throttling.EndpointMetricsThrottlingManager</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingManager.requestCountThreshold</property-name>
+      <property-value>5</property-value>
+    </property>
+  </endpoint-config>
+</jaxws-config>
+```
+This configuration file sets a 'requestCountThreshold' of 5 to enable throttling,
+returning the HTTP response code 429 to the client when the total request count reaches 5.
+It's important to note that this configuration is solely intended for demonstration purposes
+and should not be utilized in any situation other than for testing purposes.
+
+If the 'EndpointMetricsThrottlingManager' doesn't meet your requirements, you have the option to
+supply your own ThrottlingManager. Below is a straightforward example demonstrating
+how to throttle traffic after three faults occur:
+```
+public class TestThrottlingManager extends ThrottleResponse implements ThrottlingManager {
+    @Override
+    public List<String> getDecisionPhases() {
+        return Collections.singletonList(Phase.PRE_STREAM);
+    }
+
+    @Override
+    public ThrottleResponse getThrottleResponse(String phase, Message m) {
+        Endpoint endpoint = m.getExchange().get(Endpoint.class);
+        if (endpoint != null) {
+            if (endpoint.getEndpointMetrics().getFaultCount() >= 3) {
+                this.setResponseCode(429);
+                this.setDelay(200);
+                return this;
+            }
+        }
+        return null;
+    }
+}
+```
+To enable this TestThrottlingManager, the jbossws-endpoint-config.xml should be provided
+for the webservice endpoint:
+```
+  <endpoint-config>
+    <config-name>org.jboss.test.ws.jaxws.cxf.throttling.HelloImpl</config-name>
+    <property>
+      <property-name>cxf.features</property-name>
+      <property-value>##throttlingFeature</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingFeature</property-name>
+      <property-value>org.jboss.wsf.stack.cxf.features.throttling.JBossWSThrottlingFeature</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingFeature.throttlingManager</property-name>
+      <property-value>##throttlingManager</property-value>
+    </property>
+    <property>
+      <property-name>##throttlingManager</property-name>
+      <property-value>org.jboss.test.ws.jaxws.cxf.throttling.TestThrottlingManager</property-value>
+    </property>
+  </endpoint-config>
+```
